--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -1,19 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-   Sample data extraction rules file; uncomment and customize as necessary.
-   See https://developer.android.com/about/versions/12/backup-restore#xml-changes
-   for details.
--->
+<?xml version="1.0" encoding="utf-8"?>
 <data-extraction-rules>
     <cloud-backup>
-        <!-- TODO: Use <include> and <exclude> to control what is backed up.
-        <include .../>
-        <exclude .../>
-        -->
+        <!-- Include shared preferences for backup -->
+        <include domain="sharedpref" path="." />
+        <!-- Exclude temporary database files -->
+        <exclude domain="database" path="temp.db" />
     </cloud-backup>
-    <!--
     <device-transfer>
-        <include .../>
-        <exclude .../>
+        <!-- Include shared preferences for device transfer -->
+        <include domain="sharedpref" path="." />
+        <!-- Exclude temporary database files -->
+        <exclude domain="database" path="temp.db" />
     </device-transfer>
-    -->
 </data-extraction-rules>
+
